--- a/src/main/resources/static/Views/TodoList.html
+++ b/src/main/resources/static/Views/TodoList.html
@@ -13,11 +13,11 @@
         <ul class="list-group" id="todolist">
             <div class="list-group-item list-group-item-action flex-column align-items-start" data-ng-repeat="item in todoList">
                 <div data-ng-hide="item.edit">
-                    <button type="button" class="btn btn-success float-right btn-sm" ng-disabled="item.finish" data-ng-click="editSwitch(item)">Edit</button>
+                    <button type="button" class="btn btn-success float-right btn-sm" ng-disabled="item.finished" data-ng-click="editSwitch(item)">Edit</button>
                     <button type="button" class="btn btn-danger float-right btn-sm" data-ng-click="delete(item.id)">Delete</button>
-                    <input type="checkbox" data-ng-model="item.finish" data-ng-change="finishSwitch(item)"/>
-                    <span data-ng-hide="item.finish">{{item.description}}</span>
-                    <span data-ng-show="item.finish"><del>{{item.description}}</del></span>
+                    <input type="checkbox" data-ng-model="item.finished" data-ng-change="finishSwitch(item)"/>
+                    <span data-ng-hide="item.finished">{{item.description}}</span>
+                    <span data-ng-show="item.finished"><del>{{item.description}}</del></span>
                 </div>
                 <div data-ng-show="item.edit" class="input-group">
                     <input class="form-control" data-ng-model="editInProgressTodo.description" />
