Modify the ReadMe file

--- a/src/main/resources/static/Views/TodoList.html
+++ b/src/main/resources/static/Views/TodoList.html
@@ -1,6 +1,6 @@
 <div ng-init="populate()" style="margin-bottom: 40px !important;">
     <div style="height: 70px !important;">
-        <div class="alert alert-danger" data-ng-show="error && error !== ''"><strong>Fail!</strong>&nbsp;{{error}}</div>
+        <div class="alert alert-danger" data-ng-show="error && error !== ''"><strong>Failure!</strong>&nbsp;{{error}}</div>
         <div class="alert alert-success" data-ng-show="loadingMessage && loadingMessage !== ''"><strong>Success!</strong>&nbsp;{{loadingMessage}}</div>
     </div>
     <div class="panel">
